# developer

./: README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst
src/developer/: __init__.py  app.py  ast_tools.py  cache.py  cli.py  config.py  content.py  database.py  errors.py  gitignore.py  image_processor.py  lang.py  mcp_server.py  observability.py  plugins.py  realtime.py  schemas.py  screen_capture.py  security.py  server.py  shell.py  tasks.py  text_editor.py  tooling.py  utils.py  workflow.py
src/developer/stubs/: __init__.py  celery.py  fastapi.py  opentelemetry.py  pydantic.py  pydantic_settings.py
src/hypothesis/: __init__.py  strategies.py
src/rig/: __init__.py  cli.py
tests/: conftest.py  test_app.py  test_ast_tools.py  test_cache.py  test_developer.py  test_image_processor.py  test_mcp_server.py  test_observability.py  test_shell.py  test_tasks.py  test_text_editor.py  test_workflow.py
